[gd_scene load_steps=3 format=2]

[ext_resource path="res://client_ui.gd" type="Script" id=1]
[ext_resource path="res://client.gd" type="Script" id=2]

[node name="Client" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Connect" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 24.0

[node name="Host" type="LineEdit" parent="Panel/VBoxContainer/Connect"]
margin_right = 956.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "wss://127.0.0.1:8443/ws"
placeholder_text = "ws://my.server/path/"

[node name="Connect" type="Button" parent="Panel/VBoxContainer/Connect"]
margin_left = 960.0
margin_right = 1024.0
margin_bottom = 24.0
toggle_mode = true
text = "Connect"

[node name="Send" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 52.0

[node name="UserName" type="LineEdit" parent="Panel/VBoxContainer/Send"]
margin_right = 486.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Godot"
placeholder_text = "Enter some text to send..."

[node name="LineEdit" type="LineEdit" parent="Panel/VBoxContainer/Send"]
margin_left = 490.0
margin_right = 976.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "Enter some text to send..."

[node name="Send" type="Button" parent="Panel/VBoxContainer/Send"]
margin_left = 980.0
margin_right = 1023.0
margin_bottom = 24.0
text = "Send"

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/VBoxContainer"]
margin_top = 56.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="Client" type="Node" parent="."]
script = ExtResource( 2 )
[connection signal="toggled" from="Panel/VBoxContainer/Connect/Connect" to="." method="_on_Connect_toggled"]
[connection signal="pressed" from="Panel/VBoxContainer/Send/Send" to="." method="_on_Send_pressed"]
